test/bad/eps1.pacc
/*
nopacc 5:7 'expected Defns, or end-of-input'
*/

S ← ε "foo"
